--- a/debian/control
+++ b/debian/control
@@ -4,12 +4,12 @@ Priority: optional
 Maintainer: Commercial Engineering <commercial-engineering@canonical.com>
 Build-Depends: debhelper (>= 9), dh-modaliases
 Standards-Version: 3.9.7
-Vcs-Bzr:
-Vcs-Browser:
+Vcs-git: https://github.com/alex-tu-cc/pc-enablement-tools.git
+Vcs-Browser: https://github.com/alex-tu-cc/pc-enablement-tools
 
 Package: pc-enablement-tools
 Architecture: all
 Depends: zsh, vim, tmux, openssh-server, debug-logs-collector,reboot-check, ${misc:Depends}
 XB-Modaliases: ${modaliases}
-Description: pc-enablement-tools
+Description: pc-enablement-tools, also install reboot-check
  pc-enablement-tools
